name:                aeson-utils
version:             0.2
synopsis:            Utilities for defining custom Aeson instances
description:         Utilities for defining custom Aeson instances
license:             BSD3
license-file:        LICENSE
author:              Silk. B.V.
maintainer:          code@silk.co
copyright:           2014, Silk B.V
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall
  exposed-modules:
    Data.Aeson.Utils
  build-depends:
      base                 == 4.*
    , aeson                >= 0.6  && < 0.8
    , attoparsec           >= 0.10 && < 0.12
    , bytestring           >= 0.9 && < 0.11
    , scientific           == 0.2.*
    , text                 >= 0.11 && < 1.2
    , unordered-containers == 0.2.*
